<resources>
    <!-- Login-->
    <string name="login_with_facebook">COUNTINUE WITH FACEBOOK</string>
    <string name="login_with_google">COUNTINUE WITH GOOGLE</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="sign_in">Sign In</string>
    <!-- Signup -->
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in_now">Sign in now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="sign_up_with_facebook">COUNTINUE WITH FACEBOOK</string>
    <string name="sign_up_with_google">COUNTINUE WITH GOOGLE</string>
    <!--    -->
    <string name="app_name">Food Shopping App</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_signing_up_you_agree_to_our_terms_u2028condition_amp_privacy_policy"><![CDATA[By signing up you agree to our Terms  Condition & Privacy Policy]]></string>
    <string name="enter_your_email_and_new_password_for_sign_up">Enter your Email and new Password for sign up,</string>
    <string name="or_already_have_account">or Already have account?</string>
    <string name="web_client_id" translatable="false">746360451616-ka2b25fmbbikf3616i5ttgf2a1t9pnb6.apps.googleusercontent.com</string>

    <!--Forgot Password Fragment-->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_requirement">Enter your email to reset password</string>
    <string name="email_example">daijoubu@example.com</string>
    <string name="reset_password">Reset Password</string>

    <string name="facebook_app_id">398304498411353</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">6546bf8f661953e6a9cdcaf6692c57c0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--navigation bottom-->
    <string name="nav_bottom_home">Home</string>
    <string name="nav_bottom_orders">Orders</string>
    <string name="nav_bottom_saved">Saved</string>
    <string name="nav_bottom_profile">Profile</string>
    <string name="welcome">Welcome!</string>
    <string name="we_need_your_info">We need to know about you</string>
    <string name="your_first_name">Your first name</string>
    <string name="your_last_name">Your last name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_address">Your address</string>
    <string name="submit_info">Submit</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="gender_other">other</string>
    <string name="bag">Bag</string>
    <string name="feeds">Feeds</string>
    <string name="your_gender">Your gender</string>
    <string name="user_profile_avatar">User Profile Avatar</string>
    <string name="bell_icon">bell icon</string>
    <string name="user_information">User Information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone number</string>
    <string name="add_more">Add more</string>
    <string name="save">Save</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="building_floor">Building/Floor</string>
    <string name="room_name">Room Name</string>
    <string name="map_marker_icon">Map Marker Icon</string>

    <string-array name="gender">
        <item>Male</item>
        <item>FeMale</item>
        <item>Other</item>
    </string-array>
    <!-- Home fragment -->
    <string name="lbl_hello_ocoho">Hello, Ocoho!</string>
    <string name="msg_north_bridge_h">North Bridge, Halifax</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_promos">Promos</string>
    <string name="lbl_meal">Meal</string>
    <string name="lbl_drink">Drink</string>
    <string name="lbl_fastfood">FastFood</string>
    <string name="lbl_snack">Snack</string>
    <string name="lbl_nearby">Nearby</string>
    <string name="msg_popular_cuisin">Popular Cuisines</string>
    <string name="lbl_popular_eatries">Popular Eatries</string>
    <string name="lbl_view_all">View all</string>
    <string name="msg_search_for_rest">Search for restaurants, dishes... </string>
    <string name="lbl_greece">Greece</string>
    <string name="lbl_italian">Italian</string>
    <string name="lbl_new_zealander">New Zealander</string>

    <!-- Row home 2 -->
    <string name="lbl_5_0">5.0</string>
    <string name="lbl_18_mins">18 mins</string>
    <string name="lbl_3_km">3 km</string>
    <string name="msg_creamos_chape">Creamos - Chapel Ln</string>
    <string name="msg_chapel_ln_harr">Chapel Ln, Harriseahead</string>

    <!-- Row home 3 -->
    <string name="msg_lorem_burger">Lorem Burger - North Bridge</string>
    <string name="lbl_15_mins">15 mins</string>
    <string name="lbl_1_1_km">1.1 km</string>
    <string name="check">Check</string>
    <string name="account_authentication">Account Authentication</string>
    <string name="hello">Hello</string>
    <string name="authentication_notification">We have just sent an email to daijoubuteam7@gmail.com for authentication</string>
    <string name="not_this_email_address">Not this email address?</string>
    <string name="log_out">Log out</string>
    <string name="resend">Resend</string>
    <string name="change_email_address">Change email address</string>
    <string name="change">Change</string>
    <string name="email_address_requirement">Enter email address you want to change</string>

    <string name="request_location_request">Please allow us access your device location</string>
    <string name="accept">Ok</string>
    <string name="maps_api_key">AIzaSyBhMpre2PTJtHR2W-LBIrCm8CdevKtqLMg</string>
    <string name="request_map_explain">You need to allow location permission to use map</string>
    <string name="select">Select</string>
    <string name="province_city_district">Province, City, District</string>
    <string name="street_address">Street Address</string>
    <string name="your_shipping_location_is_here">Your shipping locaion is here</string>
    <string name="please_select_location">Please select location</string>
    <string name="send_email_successful">Send email successful</string>
    <string name="send_email_failed">Send email failed</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="back_home_button">Back Home Button</string>
    <string name="thumbnail_eatery">thumbnail eatery</string>
    <string name="button_information_eatery">button information eatery</string>
    <string name="save_button">save button</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="contact_information">Contact Information</string>
    <string name="image_product">image product</string>
    <string name="total">Total</string>
    <string name="_0">0</string>

    <!--    Notification channel-->
    <string name="channel_name">Food Shopping App Notification</string>
    <string name="channel_description">Use for notify order status and more…</string>
    <string name="CHANNEL_ID">notification.channel.id</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="dropdown_icon">dropdown icon</string>

    <!-- Order -->
    <string name="number_of_dishes">%1$s dishes</string>
    <!--OrderItem-->
    <string name="quantity_of_order_item">x %1$s</string>
    <!--OrderItem-->
    <string name="product_price">%1$s VND</string>
    <!--Shipping Info -->
    <string name="shipping_info">%1$s, %2$s</string>
    <string name="for_you">For you</string>
    <string name="product">Product</string>
    <string name="work_time">Work Time</string>
    <string name="rating">Rating</string>
</resources>