<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/imageChevronleft"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_chevronleft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/hello_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/welcome"
            android:textColor="@color/bluegray_700"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@id/imageChevronleft"
            />

        <TextView
            android:id="@+id/we_need_your_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:singleLine="true"
            android:text="@string/we_need_your_info"
            android:textColor="@color/gray_700"
            android:textFontWeight="500"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello_new_user"
            tools:ignore="HardcodedText"
            tools:targetApi="p"
            />


        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:hint="@string/your_first_name"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/gray_500"
            android:textColorHint="@color/gray_500"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/we_need_your_info" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:hint="@string/your_last_name"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/gray_500"
            android:textColorHint="@color/gray_500"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/first_name"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:hint="@string/your_phone_number"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/gray_500"
            android:textColorHint="@color/gray_500"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:singleLine="true"
            android:text="@string/your_gender"
            android:textColor="@color/gray_700"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            tools:targetApi="p" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/gender_label"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/gender_male"
                android:button="@android:color/transparent"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gender_female"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_flat_selector"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/gender_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gender_other"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_flat_selector"
                android:textColor="@color/radio_flat_text_selector" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_bg_deep_orange_a200_radius_6"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:gravity="center"
            android:padding="14dp"
            android:singleLine="true"
            android:text="@string/submit_info"
            android:textAllCaps="true"
            android:textColor="@color/white_A700"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/gender_radio_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
