<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="xyz.daijoubuteam.foodshoppingapp.client.profile.profile_address.ProfileAddressEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_edit_layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_A700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_edit_user_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/user_profile_avatar"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewmodel.user.photoUrl}"
                app:gender="@{viewmodel.user.gender}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circular_image"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/image_camera"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/bell_icon"
                android:scaleType="fitXY"
                android:src="@drawable/edit_avatar_icon"
                app:layout_constraintBottom_toBottomOf="@id/profile_edit_user_avatar"
                app:layout_constraintRight_toRightOf="@id/profile_edit_user_avatar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/user_infomation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:text="@string/user_information"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_layout_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_first_name_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toStartOf="@id/profile_edit_last_name_text_field"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_infomation">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Trần Văn"
                android:text="@={viewmodel.user.firstname}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_last_name_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:hint="@string/last_name"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/profile_edit_first_name_text_field"
            app:layout_constraintTop_toBottomOf="@id/user_infomation">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="An"
                android:text="@={viewmodel.user.lastname}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_email_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            app:boxBackgroundColor="@color/gray_100"
            android:hint="@string/email_address"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_first_name_text_field"
            tools:text="@string/email_example">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/email_example"
                android:text="@{viewmodel.user.email}"
                android:inputType="textEmailAddress"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_gender_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/gender"
            app:gender="@={viewmodel.user.gender}"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_email_text_field"
            app:layout_constraintEnd_toStartOf="@id/profile_edit_phone_number"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:hint="@string/phone_number"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1.2"
            app:layout_constraintStart_toEndOf="@id/profile_edit_gender_text_field"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_email_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="0905150509"
                android:text="@={viewmodel.user.phoneNumber}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/profile_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:text="@string/address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_gender_text_field" />

        <Button
            android:id="@+id/profile_edit_address_add_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:text="@string/add_more"
            android:textSize="12sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile_edit_address"
            app:layout_constraintBottom_toBottomOf="@id/profile_edit_address" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_address" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_edit_address_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="20"
                app:layout_constraintTop_toBottomOf="@id/profile_edit_address_add_more_button"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/layout_address_item" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_baseline_check"
            android:backgroundTint="@color/primaryColor"
            android:contentDescription="@string/check"
            android:layout_margin="16dp"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> viewmodel.onSaveUserData()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>