<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="xyz.daijoubuteam.foodshoppingapp.authentication.forgetpassword.ForgetPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_A700"
        android:gravity="start"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/forgot_password_title"
            android:textColor="@color/bluegray_700"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:singleLine="true"
            android:text="@string/forgot_password_requirement"
            android:textColor="@color/gray_700"
            android:textFontWeight="500"
            android:textSize="15sp"
            tools:targetApi="p" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_email_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:hint="@string/enter_your_email_here">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="daijoubuteam7@gmail.com"
                android:text="@={viewmodel.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg_deep_orange_a200_radius_6"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:gravity="center"
            android:padding="14dp"
            android:singleLine="true"
            android:text="@string/reset_password"
            android:textAllCaps="true"
            android:textColor="@color/white_A700"
            android:textFontWeight="400"
            android:textSize="16sp"
            tools:targetApi="p"
            android:onClick="@{() -> viewmodel.onSendResetPasswordEmail()}"/>
    </LinearLayout>
</layout>